--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
     "wouter": "^2.7.6"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "vite": "^5.0.0"
   }
 }
